--- a/metajam_example/HBR_watershed_3.Rmd
+++ b/metajam_example/HBR_watershed_3.Rmd
@@ -89,7 +89,7 @@ HBR_watershed_3_data <- HBR_watershed_3_data %>%
 # I can see that the column Year_Month includes the info from the column in the template 'Sampling Date' so I want to rename that column 
 
 HBR_watershed_3_data <- HBR_watershed_3_data %>% 
-  rename('Sampling Date' = 'Year_Month')
+  rename('Sampling Date' = 'Year_Month' )
 
 
 ```
@@ -106,7 +106,7 @@ HBR_watershed_3_data <- HBR_watershed_3_data %>%
   rename('Spec Cond' = 'SpecCond')
 
 HBR_watershed_3_data <- HBR_watershed_3_data %>% 
-  rename('Si' = 'SiO2')
+  rename('DSi' = 'SiO2')
 
 
 ```
@@ -115,15 +115,10 @@ HBR_watershed_3_data <- HBR_watershed_3_data %>%
 Read in template
 ```{r}
 
-template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
-                               sheet = "Raw Data",
+template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
                                col_types = "text"
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
-
-#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
-template <- template %>% 
-  add_column('NOx' = '.', .before = "NO3")
 
 ```
 
@@ -142,7 +137,7 @@ Fuzzy match
 
 (lookup_table <- fuzzy_match %>%
   mutate(watershed3 = case_when(
-    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP") ~ NA_character_,
+    template %in% c("DSi", "DIN", "NOx","TOC", "TN") ~ NA_character_,
     TRUE ~ watershed3)))
 
 correct_colnames <- lookup_table$template
