--- a/metajam_example/NWT_martinelli_watershed.Rmd
+++ b/metajam_example/NWT_martinelli_watershed.Rmd
@@ -97,6 +97,9 @@ martinelli_NWT_data <- martinelli_NWT_data %>%
 martinelli_NWT_data <- martinelli_NWT_data %>% 
   rename('alkalinity' = 'alkal')
 
+martinelli_NWT_data <- martinelli_NWT_data %>% 
+  rename('DSi' = 'Si')
+
 names(martinelli_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(martinelli_NWT_data))
 
 ```
@@ -104,15 +107,11 @@ names(martinelli_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(martinelli_NWT_
 Read in template
 ```{r}
 
-template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
-                               sheet = "Raw Data",
+
+template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
                                col_types = "text"
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
-
-#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
-template <- template %>% 
-  add_column('NOx' = '.', .before = "NO3")
 
 
 ```
@@ -138,7 +137,7 @@ Fuzzy Match
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table <- fuzzy_match %>%
   mutate(watershed12 = case_when(
-    template %in% c("DIC", "NOx", "TKN", "PON") ~ NA_character_,
+    template %in% c("DIN", "NOx", "DIC") ~ NA_character_,
     TRUE ~ watershed12)))
 
 lookup_table <- lookup_table %>%
@@ -161,12 +160,12 @@ my_data$attribute_metadata
 ```{r}
 #Changing missing value codes for columns for which NP is the missing value code
 
-new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
- mutate(NH4 = ifelse(NH4 < 0.1428, NA, NH4))
+#new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
+# mutate(NH4 = ifelse(NH4 < 0.1428, NA, NH4))
 
 
-new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
- mutate(TDP = ifelse(TDP < 0.0258, NA, TDP))
+#new_datatable_NWT_3 <- new_datatable_NWT_3 %>% 
+# mutate(TDP = ifelse(TDP < 0.0258, NA, TDP))
 
 
 ```
@@ -222,7 +221,7 @@ Fuzzy matching template solute units table to attribute table
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table_units <- fuzzy_match %>%
   mutate(watershed_units_12 = case_when(
-    solute_units_Template$Measurement %in% c("DIC","DO", "DO%","PON", "TKN") ~ NA_character_, TRUE ~ watershed_units_12)))
+    solute_units_Template$Measurement %in% c("DIC","DO", "DO%", "TKN", "PON") ~ NA_character_, TRUE ~ watershed_units_12)))
 
 #Make a string of the correct names
 correct_names <- lookup_table_units$'solute_units_Template$Measurement'
