--- a/metajam_example/HBR_watershed_6.Rmd
+++ b/metajam_example/HBR_watershed_6.Rmd
@@ -106,23 +106,17 @@ HBR_watershed_6_data <- HBR_watershed_6_data %>%
 
 
 HBR_watershed_6_data <- HBR_watershed_6_data %>% 
-  rename('Si' = 'SiO2')
+  rename('DSi' = 'SiO2')
 
 ```
 
 Read in template
 ```{r}
 
-template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
-                               sheet = "Raw Data",
+template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
                                col_types = "text"
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
-
-
-#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
-template <- template %>% 
-  add_column('NOx' = '.', .before = "NO3")
 
 ```
 
@@ -139,7 +133,7 @@ Fuzzy match
 
 (lookup_table <- fuzzy_match %>%
   mutate(watershed6 = case_when(
-    template %in% c("TOC", "TN", "TKN", "TDP", "PP", "PON", "DOP") ~ NA_character_,
+    template %in% c("DIN", "TN", "NOx",  "TOC") ~ NA_character_,
     TRUE ~ watershed6)))
 
 correct_colnames <- lookup_table$template
