--- a/metajam_example/NWT_arikaree_watershed.Rmd
+++ b/metajam_example/NWT_arikaree_watershed.Rmd
@@ -100,6 +100,9 @@ arikaree_NWT_data <- arikaree_NWT_data %>%
 arikaree_NWT_data <- arikaree_NWT_data %>% 
   rename('alkalinity' = 'alkal')
 
+arikaree_NWT_data <- arikaree_NWT_data %>% 
+  rename('DSi' = 'Si')
+
 names(arikaree_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(arikaree_NWT_data))
 
 ```
@@ -107,16 +110,10 @@ names(arikaree_NWT_data) <- gsub("[^0-9A-Za-z///' ]","", names(arikaree_NWT_data
 Read in template
 ```{r}
 
-template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), 
-                               sheet = "Raw Data",
+template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"), 
                                col_types = "text"
                                ) %>%
   mutate(`Sampling Date` = as.Date(`Sampling Date`))
-
-#Adding a column for NO3 so that the template includes both an NO3 column and NOx column
-template <- template %>% 
-  add_column('NOx' = '.', .before = "NO3")
-
 
 ```
 
@@ -141,7 +138,7 @@ Fuzzy Match
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table <- fuzzy_match %>%
   mutate(watershed11 = case_when(
-    template %in% c("DIC", "NOx", "TKN", "PON") ~ NA_character_,
+    template %in% c("DIN", "NOx", "DIC") ~ NA_character_,
     TRUE ~ watershed11)))
 
 lookup_table <- lookup_table %>%
@@ -173,16 +170,16 @@ my_data$attribute_metadata
 
 #Changing missing value codes for columns for which NP is the missing value code
 
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
- mutate(NH4 = ifelse(NH4 < 0.1428, NA, NH4))
+#new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
+# mutate(NH4 = ifelse(NH4 < 0.1428, NA, NH4))
 
 
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
- mutate(PO4 = ifelse(PO4 < 0.038, NA, PO4))
+#new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
+# mutate(PO4 = ifelse(PO4 < 0.038, NA, PO4))
 
 
-new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
- mutate(TDP = ifelse(TDP < 0.0258, NA, TDP))
+#new_datatable_NWT_2 <- new_datatable_NWT_2 %>% 
+ #mutate(TDP = ifelse(TDP < 0.0258, NA, TDP))
 
 
 ```
@@ -239,7 +236,7 @@ Fuzzy matching template solute units table to attribute table
   # Note: NA_character_ is just NA but of the character type.
 (lookup_table_units <- fuzzy_match %>%
   mutate(watershed_units_11 = case_when(
-    solute_units_Template$Measurement %in% c("DIC","DO", "DO%","PON", "TKN") ~ NA_character_, TRUE ~ watershed_units_11)))
+    solute_units_Template$Measurement %in% c("DIC","DO", "DO%", "TKN", "PON") ~ NA_character_, TRUE ~ watershed_units_11)))
 
 #Make a string of the correct names
 correct_names <- lookup_table_units$'solute_units_Template$Measurement'
