--- a/metajam_example/NWT_soddie_watershed.Rmd
+++ b/metajam_example/NWT_soddie_watershed.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ###Step 1: Load packages
 
 ```{r}
-
+#install.packages("metajam")
 library(metajam)  
 library(udunits2)
 # For wrangling the data
@@ -19,7 +19,6 @@ library(tidyr)
 library(dplyr)
 library(purrr)
 library(stringr)
-library(metajam)
 library(tidyverse) # for convenience
 library(here) # for file path management
 library(stringdist) # for first pass of naming-matching
@@ -55,10 +54,23 @@ dir.create(desired_path_to_data, showWarnings = FALSE)
 
 ```{r}
 
+
+#my_data_url <- "https://portal.edirepository.org/nis/dataviewer?packageid=knb-lter-nwt.213.1&entityid=191b29ee0884b9c5848fe3c6db329a63"
+
+# this will download the data into a folder and save the path to that folder
+downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_to_data)
+
+
+
+```
+
+
+```{r}
+
 meta_obj <- "doi:10.6073/pasta/49ace263067caf02c0b27c8b6a877683"
 
 # this will download the data into a folder and save the path to that folder
-downloaded_data <- download_d1_data_pkg(meta_obj = "doi:10.6073/pasta/49ace263067caf02c0b27c8b6a877683", path = desired_path_to_data)
+downloaded_data <- download_d1_data_pkg(meta_obj, path = desired_path_to_data)
 
 
 ```
